--- a/Login/login.html
+++ b/Login/login.html
@@ -12,13 +12,13 @@
     <div class="box">
         <div class="form">
           <center>  <h2 style="margin-top:-50px">Login</h2></center>
-                <form>
+                <form  action="Welcome.php" method="post">
                     <div class="inputBx">
-                        <input type="text" placeholder="Username">
+                        <input type="text" name="cms_id" placeholder="CMS-ID">
                         <img src="user.png" width="25">
                     </div>
                     <div class="inputBx">
-                        <input type="password" placeholder="Password">
+                        <input type="password" name="password" placeholder="Password">
                         <img src="padlock.png" width="25">
                     </div>
                     <label class="remeber"><input type="checkbox">
